# nexus

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  requirements-dev.txt  requirements-train.txt  requirements.txt
.claude/: settings.local.json
.claude/agents/: qa-tester.md
.claude/rules/: agent-collaboration.md  anti-patterns.md  architecture.md  development-workflow.md  domain-model.md  testing.md
cli/: commands.py  formatters.py  repl.py
config/: logging_config.yaml  model_profiles.yaml  nexus_config.yaml  permission_rules.yaml  tenants.yaml  tool_mappings.yaml
core/: bootstrap.py  config.py  message.py  state.py  task.py
core/hooks/: __init__.py  builtin_hooks.py  hook_manager.py
core/memory/: __init__.py  decay.py  importance.py  long_term.py  manager.py  short_term.py  transcript.py  types.py
core/model/: gpu_detector.py  hardware_tier.py  inference.py  model_manager.py  prompt_formatter.py  scout_provider.py
core/orchestrator/: __init__.py  agent_definition.py  context_manager.py  model_dispatcher.py  prompt_assembler.py  query_engine.py  query_loop.py  retry.py  routing.py  stop_resolver.py  stream_handler.py  stream_watchdog.py  turn_state.py
core/permission/: __init__.py  pipeline.py  types.py
core/rag/: __init__.py  indexer.py  knowledge_retriever.py  knowledge_store.py  pgvector_base.py  retriever.py  symbol_indexer.py  symbol_store.py
core/security/: __init__.py  audit.py  command_filter.py  path_guard.py
core/thinking/: __init__.py  assessor.py  cache.py  hidden_cot.py  orchestrator.py  self_reflection.py  strategy.py
core/tools/: base.py  executor.py  registry.py
deployment/: airgap_prep.py  integrity.py
scripts/: _ssh_check_chat_template.py  _ssh_check_vllm_parser.py  _ssh_kowiki_status.py  _ssh_phase3_status.py  _ssh_restart_scout.py  _ssh_restart_vllm.py  _ssh_train_phase2.py  _ssh_train_phase3.py  _ssh_training_status.py  _ssh_upload_bootstrap.py  _ssh_verify_vllm.py  _verify_phase.py  generate_bootstrap.py  prepare_kowiki.py  train_lora.py  train_qwen_lora.py  train_qwen_lora_phase2.py  train_qwen_lora_phase3.py  train_tenant_lora.py
tests/: conftest.py
tests/e2e/: test_benchmark.py  test_gpu_e2e.py  test_soak.py
tests/integration/: test_airgap_integration.py  test_full_pipeline.py  test_training_integration.py  test_web_integration.py
tests/unit/: test_adapter_naming.py  test_agent_definition.py  test_agent_tool.py  test_config.py  test_context_manager_tier.py  test_embedding_warmup.py  test_gpu_detector.py  (+28 more)
training/: __init__.py  adapter_naming.py  bootstrap_generator.py  checkpoint_manager.py  data_collector.py  feedback_loop.py  strategy.py  trainer.py
user_mig/: PROJECT_NEXUS_SPEC_v6.1_EN.md  PROJECT_NEXUS_SPEC_v7.0_AMENDMENT.md  rtx5090_token_limits.md
web/: app.py  middleware.py
(+27 files in other folders)
