[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-nexus"
version = "0.1.0"
description = "에어갭(폐쇄망) 로컬 LLM 오케스트레이션 플랫폼"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Nexus Team"},
]

dependencies = [
    # LLM 추론
    "torch>=2.3.0",
    "transformers>=4.44.0",
    "accelerate>=0.33.0",
    "safetensors>=0.4.0",
    # API & Web
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sse-starlette>=2.1.0",
    # 데이터베이스
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "redis[hiredis]>=5.0.0",
    "pgvector>=0.3.0",
    # 임베딩
    "sentence-transformers>=3.0.0",
    # CLI
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.47",
    "click>=8.1.7",
    # 유틸리티
    "pyyaml>=6.0.1",
    "jinja2>=3.1.4",
    "aiofiles>=24.1.0",
    "structlog>=24.4.0",
    "psutil>=6.0.0",
    "watchdog>=4.0.0",
    "orjson>=3.10.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
train = [
    "peft>=0.12.0",
    "trl>=0.10.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.20.0",
    "evaluate>=0.4.0",
    "rouge-score>=0.1.2",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "ipdb>=0.13.0",
]

[project.scripts]
nexus = "cli.repl:main"

# ===========================
# Ruff (린터 + 포매터)
# ===========================
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "ASYNC", # flake8-async
    "S",    # flake8-bandit (보안)
    "T20",  # flake8-print
]
ignore = [
    "S101",  # assert 사용 허용 (테스트)
    "T201",  # print 사용 허용 (CLI 출력)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "training", "deployment", "cli", "web"]

# ===========================
# Pytest
# ===========================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: 단위 테스트",
    "integration: 통합 테스트",
    "e2e: E2E 테스트",
    "slow: 느린 테스트 (타임아웃 확장)",
]
filterwarnings = [
    "ignore::UserWarning",
]

# ===========================
# Mypy
# ===========================
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["redis.*", "asyncpg.*", "vllm.*", "peft.*", "trl.*"]
ignore_missing_imports = true
